--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.96"
+thiserror = "2.0.11"
+serde = { version = "1.0.218", features = ["derive"] }
+toml = "0.8.20"
