--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ anyhow = "1.0.96"
 thiserror = "2.0.11"
 serde = { version = "1.0.218", features = ["derive"] }
 toml = "0.8.20"
+bpaf = { version = "0.9.15", features = ["derive"] }
